[workspace]

resolver = '2'

members = ["packages/*", "contracts/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Oraichain Labs"]

[workspace.dependencies]
cosmwasm-schema = "1.5"
cosmwasm-std = "1.5"
cw-storage-plus = "1.2.0"
cw2 = "1.0.1"
cw20 = "1.1.2"
cw721 = "0.18.0"
thiserror = "1.0.31"
cw-otc-common = { path = "./packages/cw-otc-common", version = "0.1.0" }
cw-otc = { path = "./contracts/cw-otc", version = "0.1.0" }

cosmwasm-testing-util = { git = "https://github.com/oraichain/cosmwasm-testing-util.git", rev = "8363328" }
