[package]
name = "otcer-tests"

version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw20 = { workspace = true }
cw721 = { workspace = true }
rhaki-cw-plus = { workspace = true }
cw-multi-test = { workspace = true }
cw-otc-common = { workspace = true }
cw-otc = { workspace = true }
anyhow = "1.0.75"
cw20-base = "1.1.1"
cw721-base = { version = "0.18.0", features = ["library"] }
