[package]
name = "cw-otc"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
exclude = ["contract.wasm", "hash.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []


[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true, features = ["macro"] }
cw2 = { workspace = true }
thiserror = { workspace = true }
cw-otc-common = { workspace = true }

[dev-dependencies]
cw20 = { workspace = true }
cw721 = { workspace = true }
cosmwasm-testing-util = { workspace = true }
anyhow = "1.0.75"
cw20-base = "1.1.1"
cw721-base = { version = "0.18.0", features = ["library"] }
